# edwaleni-technologies

./: Master Model.FCStd  Python Console Code.txt  ReadMe.md  boxblade_part_management.py  pyproject.toml
EXPORTS/: boxblade_parts_database.csv
src/: config_landlord.py  config_tenant.py  house-rules.py  landlord_config.py  lease-blank.py  main.py
